// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Youtube adapter construct builds with attributes 1`] = `
Object {
  "endTime": null,
  "startTime": 5,
  "videoId": "example_video_id",
  "videoUrl": "https://www.youtube.com/watch?v=example_video_id",
}
`;

exports[`Youtube adapter construct builds without attributes 1`] = `
Object {
  "endTime": null,
  "startTime": null,
  "videoId": null,
  "videoUrl": null,
}
`;

exports[`Youtube adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "endTime": null,
    "startTime": 5,
    "videoId": "example_video_id",
    "videoUrl": "https://www.youtube.com/watch?v=example_video_id",
  },
}
`;
